--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=º, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0
 .0/css/bootstrap.min.css">
+    <head>
+    <link
+    rel="stylesheet"
+     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    </head>           
     <link rel="stylesheet" href="main.css">
     <title>Meraki Nails</title>
 </head>
@@ -28,10 +34,10 @@
     </header>
     <main>
         <div class="card ">
-            <img src="./img/fotoPerfil.jpg" class="card-img-top " alt="fotoPerfil">
+            <img src="./img/fotoPerfil.jpg" class="card-img-top animate__animated animate__zoomInLeft" alt="fotoPerfil">
             <div class="card-body ">
-              <h4 class="card-title">Selene Muller</h4>
-              <p class="card-text">Mas de 2 años en esto, brindando un servicio de calidad, con productos de calidad, gracias a ustedes.</p>
+              <h4 class="card-title">Selene Müller</h4>
+              <p class="card-text">Brindando un servicio de calidad, con productos de calidad.</p>
             </div>
           </div>
           <div class="position-relative">
@@ -42,7 +48,7 @@
     </main>
     <footer>
         <div>
-            <p class="textoFooter">Todos los productos estan aprobados por ANMAT</p>
+            <p class="textoFooter">Todos los productos estan aprobados por <a href="https://www.argentina.gob.ar/anmat" class="anmat">ANMAT </a> </p>
         </div>
         <div id="padreListaFooter">
             <ul class="listaFooter">
